# pulurobot-ros

./: README.md
my_own_robot/: CMakeLists.txt  package.xml
my_own_robot/launch/: my_own_robot.launch
my_own_robot/meshes/bases/: roue_stage.stl  vehicle_stage.stl
my_own_robot/urdf/: my_own_robot.gazebo.xacro  my_own_robot.urdf.xacro
pulurobot_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  base_local_planner_params2.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
pulurobot_2dnav/launch/: move_base.launch  no_global_map.launch
pulurobot_description/: CMakeLists.txt  package.xml
pulurobot_description/launch/: gmapping.launch  octomap.launch  pulurobot.rviz  pulurobot_gazebo_rviz.launch  pulurobot_gazebo_rviz_gmapping.launch  pulurobot_rviz.launch
pulurobot_description/map/: software_factory.bag.pgm  software_factory.bag.yaml  software_factory.bt  software_factory.ot
pulurobot_description/urdf/: pulurobot.urdf
pulurobot_gazebo/: CMakeLists.txt  package.xml
pulurobot_gazebo/launch/: pulurobot_world.launch
