<?xml version="1.0"?>
<package>
  <name>pulurobot_gazebo</name>
  <version>0.0.0</version>
  <description>pulurobot_gazebo</description>
  <maintainer email="joss@todo.todo">joss</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pulurobot_control</run_depend>
  <run_depend>pulurobot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
